fix(accessbility) contrast color for link

--- a/themes/roots/sass/_variables.scss
+++ b/themes/roots/sass/_variables.scss
@@ -2,7 +2,7 @@
         --primary-color: #B7E0A3;
         --primary-text-color: black;
         --primary-text-color-over: #000;
-        --primary-link-color: #F9BB2D;
+        --primary-link-color: #803C00;
         --secondary-color: #fcfaf6;
         --secondary-text-color: #303030;
         --toc-highlight-text-color: #d46e13;
